--- a/src/AdminPage/Register/Register.css
+++ b/src/AdminPage/Register/Register.css
@@ -1,112 +1,43 @@
+/* Estilos GoogleFont */
+@import url("https://fonts.googleapis.com/css2?family=Abel&family=Anton&family=Saira+Condensed:wght@600&display=swap");
+
 body {
   background-color: black;
 }
 
+.formulario {
+  background-color: black;
+}
+
 .title {
-  width: 100%;
+  font-family: "Anton", sans-serif;
+  color: rgb(224, 211, 30);
+  font-style: italic;
+  font-size: 2.3rem;
   max-width: 600px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-.formulario {
-  box-shadow: rgb(10, 10, 10) 2px 1px 1px 1px;
-  background-color: rgb(219, 218, 216);
-}
-.formulario > div {
-  max-width: 600px;
-  margin: 0 auto;
-  justify-content: center;
-  align-items: center;
-}
-.formulario input {
-  width: 100%;
-  height: 33px;
-  margin: 10px auto;
-}
-
-.formulario button {
-  background: rgb(153, 155, 156);
-  cursor: pointer;
-  border: thick black 1px;
-  margin: 20px auto;
-  padding: 1%;
-}
-
-.formulario button:hover {
-  background-color: goldenrod;
-  border: thick black 1px;
-}
-
-.sexo {
-  display: flex;
-}
-.sexo > label {
-  margin: 5px;
+  background-color: black;
 }
 
 .error {
-  color: rgb(184, 72, 72);
-  align-items: center;
+  color: rgb(248, 46, 46);
+  font-family: "Abel", sans-serif;
+  font-size: 1rem;
+}
+
+.subtitles {
+  font-family: "Saira Condensed", sans-serif;
+  color: rgb(41, 41, 40);
+  font-size: 1.3rem;
+}
+
+.fields {
+  border-radius: 1px;
+  background-color: rgb(231, 228, 225);
   justify-content: center;
-  margin: 0 auto;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.general {
   align-items: center;
-  justify-content: center;
-  margin: 0 auto;
-  width: 100%;
-  display: flex;
-}
-
-#age {
-  width: auto;
-}
-
-#height {
-  width: auto;
-}
-
-#weigth {
-  width: auto;
-}
-
-.particular {
-  align-items: center;
-  justify-content: center;
-  margin: 0 auto;
-  width: 100%;
-  display: flex;
-}
-
-#neck {
-  width: auto;
-}
-
-#waist {
-  width: auto;
-}
-
-#hip {
-  width: auto;
-}
-
-.check {
-  display: flex;
-}
-
-.check > label {
-  margin: 5px;
-  padding: 10px;
-}
-
-.explain {
-  width: 100%;
 }
