--- a/src/AdminPage/Register/Register.css
+++ b/src/AdminPage/Register/Register.css
@@ -1,39 +1,111 @@
-/* Estilos GoogleFont */
-@import url("https://fonts.googleapis.com/css2?family=Abel&family=Anton&family=Saira+Condensed:wght@600&display=swap");
+/* Estilos GoogleFont:
+    font-family: 'Abel', sans-serif;
+    font-family: 'Allerta Stencil', sans-serif;
+    font-family: 'Anton', sans-serif;
+    font-family: 'Saira Condensed', sans-serif;
+*/
+@import url('https://fonts.googleapis.com/css2?family=Abel&family=Allerta+Stencil&family=Anton&family=Saira+Condensed:wght@600&display=swap');
+
+body{
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-areas: 
+  "title"
+  "form"
+  "btn";
+  row-gap: 1px;
+  padding: 0 auto;
+  width: auto;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+}
 
 .formulario {
-  background-color: transparent;
+  background-color: #d2cecefc;
+  grid-area: form;
+  align-items: center;
+  justify-content: center;
 }
 
 .title {
   font-family: "Anton", sans-serif;
-  color: rgb(51, 48, 6);
+  color: rgb(0, 0, 0);
   font-style: italic;
-  font-size: 2.3rem;
+  font-size: 2rem;
   max-width: 600px;
-  margin: 0 auto;
+  margin: 1rem auto;
+  padding-top: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: transparent;
+  font-weight: 1px;
+  grid-area: title;
 }
 
 .error {
   color: rgb(248, 46, 46);
   font-family: "Abel", sans-serif;
   font-size: 1rem;
+  margin-left: 5vh;
 }
 
 .subtitles {
-  font-family: "Saira Condensed", sans-serif;
   color: rgb(41, 41, 40);
-  font-size: 1.3rem;
+  font-size: 1rem;
+  font-family: 'Allerta Stencil', sans-serif;
+  font-weight: 200;
 }
 
 .fields {
-  border-radius: 1px;
-  background-color: rgb(231, 228, 225);
+  border-radius: 2px;
+  background-color: rgb(243, 239, 236);
   justify-content: center;
   align-items: center;
+  padding-top: 10px;
+  margin: auto 1vh;
+}
+
+.input{
+  max-width: 40%;
+  min-width: 33%;
+  display: flex;
+  margin-left: 9vh;
+}
+
+.inputNum{
+  max-width: 9%;
+  min-width: 5%;
+  margin-left: 1vh;
+  margin-right: 1.3vh;
+}
+
+.explain{
+  max-width: 40%;
+  min-width: 33%;
+  margin-left: 10vh;
+}
+
+.check{
+  max-width: 10%;
+  min-width: 5%;
+  margin-left: 9vh;
+}
+
+.medida {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#frequency{
+  max-width: 40%;
+  min-width: 33%;
+  margin-left: 10vh;
+  height: 5vh;
+}
+.send {
+  grid-area: btn;
 }
