--- a/src/UserPage/userView/UserView.css
+++ b/src/UserPage/userView/UserView.css
@@ -2,3 +2,25 @@
     margin: 0px;
     padding: 0px;
 }
+
+.carousel-item {
+    height: 85vh;
+    min-height: 100px;
+    background: no-repeat center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+
+  .card-columns .card {
+    display: inline-block;
+    width: 100%;
+  }
+  
+  .card-img-top {
+    width: 100%;
+    height: 300px; 
+    border-top-left-radius: calc(0.25rem - 1px);
+    border-top-right-radius: calc(0.25rem - 1px);
+  }
