--- a/src/UserPage/userView/UserView.css
+++ b/src/UserPage/userView/UserView.css
@@ -3,24 +3,28 @@
     padding: 0px;
 }
 
-.carousel-item {
-    height: 85vh;
-    min-height: 100px;
-    background: no-repeat center center scroll;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-  }
+  .css-184cuy3-MuiStack-root {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    margin: 15;
+    align-content: flex-start;
+    justify-content: space-around;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
 
-  .card-columns .card {
-    display: inline-block;
-    width: 100%;
-  }
-  
-  .card-img-top {
-    width: 100%;
-    height: 300px; 
-    border-top-left-radius: calc(0.25rem - 1px);
-    border-top-right-radius: calc(0.25rem - 1px);
-  }
+ #welcome {
+  display: flex;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  margin: 15;
+  padding:5;
+  align-content: flex-start;
+  justify-content: space-around;
+  flex-direction: row;
+  flex-wrap: nowrap;
+ } 
