--- a/src/LandingPage/Footer/footer.css
+++ b/src/LandingPage/Footer/footer.css
@@ -10,8 +10,8 @@
   line-height: 20px;
   display: flex;
   flex-wrap: wrap;
-  align-items: flex-start;
-  justify-content: space-between;
+  align-items: center;
+  justify-content: center;
 }
 .box {
   flex-basis: 25%;
