--- a/src/Community/Post.css
+++ b/src/Community/Post.css
@@ -7,3 +7,10 @@
   box-shadow: 0px 5px 7px -7px;
   width: 100%;
 }
+
+.sendPostButton{
+  background: transparent;
+  border-radius: 50%;
+  width: 0%;
+  height: 0%;
+}
