styles input create community

--- a/src/Community/Edit.css
+++ b/src/Community/Edit.css
@@ -5,8 +5,8 @@
 }
 
 .editButtonSend {
-    width: 0%;
-    height: 0%;
+    background: transparent;
+    border-style: none;
 }
 
 .checkPostEdited {
