--- a/src/Community/Create.css
+++ b/src/Community/Create.css
@@ -1,16 +1,22 @@
 .message {
-  display: flex;
-  margin-top: 30px;
-  flex-direction: column;
-  background-color: white;
-  border-radius: 15px;
-  box-shadow: 0px 5px 7px -7px;
-  width: 100%;
+    display: flex;
+    margin-top: 30px;
+    flex-direction: column;
+    background-color: white;
+    border-radius: 15px;
+    box-shadow: 0px 5px 7px -7px;
+    width: 100%;
 }
 
-.sendPostButton{
-  background: transparent;
-  border-radius: 50%;
-  width: 0%;
-  height: 0%;
+.addPicture {
+    margin-top: 3%;
+    margin-left: 2%;
+}
+
+.sendPostButton {
+    background: transparent;
+    border-style: none;
+    float: right;
+    margin-top: 0.5%;
+    padding: 1%;
 }
