--- a/src/Community/PostCard.css
+++ b/src/Community/PostCard.css
@@ -2,3 +2,10 @@
     padding-right: 1%;
     padding-left: 1%;
 }
+
+
+/*.contentCardPost {
+    width: 70%;
+    display: block;
+    margin: auto;
+}*/
