--- a/src/Community/Create.css
+++ b/src/Community/Create.css
@@ -24,8 +24,9 @@
 
 .avatarCreatePost {
     display: block;
-    width: 4%;
+    width: 3.5%;
     height: auto;
     position: relative;
-    margin-bottom: -3%;
+    margin-bottom: -3.5%;
+    border-radius: 50%;
 }
