--- a/src/LandingPage/Carrousel/carrousel.css
+++ b/src/LandingPage/Carrousel/carrousel.css
@@ -6,6 +6,7 @@
   height: 80vh;
   max-height: 100%;
   width: auto;
+  color: #212529;
   background-color: #212529;
   font-family: "Saira Condensed", sans-serif;
   align-items: center;
@@ -18,12 +19,13 @@
   margin-left: 13%;
 }
 
-.carousel-caption {
+.carousel-label {
   background-color: rgba(243, 219, 59, 0.745);
+  text-align: center;
+  font-size: 20px;
+  color: #212529 !important;
 }
-h3 p {
-  color: rgba(10, 7, 7, 0.832);
-}
+
 @media only screen and (max-width: 1200px) {
   .carousel-item {
     height: 90vh;
