--- a/src/Community/ReadPost.css
+++ b/src/Community/ReadPost.css
@@ -1,13 +1,18 @@
 .contentCommunity {
     display: grid;
-    grid-template-columns: 1fr 0.45fr;
-    grid-template-rows: 0.5fr 1fr;
-    grid-template-areas: "createPost interestArea" "postArea interestArea";
+    grid-template-columns: 0.01fr 1fr 0.45fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas: "avatarAside createPost interestArea" "avatarAside postArea interestArea";
     width: 100%;
     height: 100vh;
     padding: 0%;
-    column-gap: 0%;
+    column-gap: 1%;
     margin-top: -3%;
+}
+
+.avatarAside {
+    grid-area: avatarAside;
+    background: transparent;
 }
 
 .createPost {
@@ -25,11 +30,8 @@
     background-color: #FFF;
     height: auto;
     position: sticky;
-}
-
-.contentPostCard {
-    margin: 5%;
-    position: relative;
-    display: flex;
-    align-items: center;
+    margin-bottom: 10%;
+    box-shadow: 0px 5px 7px -7px;
+    margin-right: 2%;
+    border-radius: 5px;
 }
