--- a/src/AdminPage/Register/Register.css
+++ b/src/AdminPage/Register/Register.css
@@ -11,19 +11,22 @@
   justify-content: center;
   margin: auto;
   width: 100%;
-  max-width: 400px;
+  max-width: 450px;
   box-shadow: 0.5px 10px -5px rgba(0, 0, 0, 0.315);
   padding: 5em auto;
   text-align: center;
+  margin-top: -13vh;
 }
 
 .title {
   font-family: "Anton", sans-serif;
   color: #ecc510fc;
   text-shadow: 2px 3px 3px black;
+  background-color: rgba(0, 0, 0, 0.681);
   font-style: italic;
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 1px;
+  padding: 2vh;
 }
 
 .error {
@@ -88,7 +91,6 @@
   width: 90%;
 }
 .send {
-  grid-area: btn;
   padding: 1%;
   border-radius: 7px;
   font-family: 'Allerta Stencil', sans-serif;
@@ -97,9 +99,8 @@
   background-color: rgb(108, 108, 40);
   border: solid 1px rgb(207, 207, 8);
   color:rgb(243, 239, 236);
-  margin: 3vh 28vh;
   box-shadow: rgb(221, 227, 32) 1px 2px 1px 1px;
-
+  margin-top: 3vh;
 }
 
 .send:hover{
