--- a/src/LandingPage/Carrousel/carrousel.css
+++ b/src/LandingPage/Carrousel/carrousel.css
@@ -3,20 +3,20 @@
 .carousel-item {
   display: block;
   justify-content: center;
-  height: 80vh;
   width: 100%;
   color: #212529;
   background-color: #212529;
   font-family: "Saira Condensed", sans-serif;
   align-items: center;
+  margin: 0 auto;
 }
 
 .picture {
   height: auto;
   width: 100%;
 
-  padding-right: 10px;
-  /* margin-left: 13%;*/
+  /*padding-right: 10px;
+  margin-left: 13%;*/
 }
 
 .carousel-label {
@@ -25,10 +25,3 @@
   font-size: 20px;
   color: #212529 !important;
 }
-
-/*@media only screen and (max-width: 1200px) {
-  .carousel-item {
-    height: 90vh;
-  }
-}
-*/
