--- a/src/UserPage/userView/UserView.css
+++ b/src/UserPage/userView/UserView.css
@@ -61,3 +61,11 @@
   height: 76px;
   margin-top: 10px;
 }
+
+.css-18qy2ck {
+  background-image: url("../../assets/lp_imgs/Login.jpg");
+}
+
+#title, #subtitle {
+  color: white;
+}
