--- a/src/LandingPage/InfoGeneral.css
+++ b/src/LandingPage/InfoGeneral.css
@@ -7,4 +7,13 @@
   background-size: cover;
   background-attachment: fixed;
   background-size: cover;
+  display: flex;
+  width: auto;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  column-gap: 2%;
+  row-gap: 2%;
+  padding-bottom: 1.5%;
+  padding-top: 1.3%;
 }
