--- a/src/LandingPage/navBar/NavBar.css
+++ b/src/LandingPage/navBar/NavBar.css
@@ -1,3 +1,12 @@
+/* Estilos GoogleFont:
+    font-family: 'Abel', sans-serif;
+    font-family: 'Allerta Stencil', sans-serif;
+    font-family: 'Anton', sans-serif;
+    font-family: 'Saira Condensed', sans-serif;
+*/
+@import url('https://fonts.googleapis.com/css2?family=Abel&family=Allerta+Stencil&family=Anton&family=Saira+Condensed:wght@600&display=swap');
+
+
 .icon {
   height: 10vh;
   width: 10vh;
@@ -5,12 +14,27 @@
   box-shadow: rgb(14, 15, 7) 2px 9px 19px 6px;
   margin-top: 1vh;
 }
+
 .contenido {
   font-family: "Allerta Stencil", sans-serif;
 }
+
+.logoText{
+  font-family: 'Anton', sans-serif;
+  font-size: 1.7rem;
+  color: #ecc510fc;;
+
+}
+
 a.nav-link {
   color: white;
 }
+
 a.nav-link:hover {
   color: rgb(210, 153, 11);
+}
+
+.login{
+  text-decoration: none;
+  background-color: yellow;
 }
