--- a/src/AdminPage/Register/Register.css
+++ b/src/AdminPage/Register/Register.css
@@ -27,6 +27,9 @@
   font-size: 1.5rem;
   font-weight: 1px;
   padding: 2vh;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 .error {
